--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -1,5 +1,5 @@
 @article{de-bruijn-1946,
-  author="DE BRUIJN, N. G.",
+  author="de Bruijn, N. G.",
   title="A combinatorial problem",
   journal="Proc. Koninklijke Nederlandse Academie van Wetenschappen",
   ISSN="",
@@ -55,6 +55,20 @@
   issn="1432-1807",
   doi="10.1007/BF01475864",
   url="https://doi.org/10.1007/BF01475864"
+}
+
+@article{tijdeman-1975,
+  author = "Tijdeman, R.",
+  fjournal = "Bulletin of the American Mathematical Society",
+  journal = "Bull. Amer. Math. Soc.",
+  month = "07",
+  number = "4",
+  pages = "672--675",
+  publisher = "American Mathematical Society",
+  title = "Review: L. Kuipers and H. Niederreiter, Uniform distribution of sequences",
+  url = "https://projecteuclid.org:443/euclid.bams/1183537132",
+  volume = "81",
+  year = "1975"
 }
 
 @book{mccarthy-1986,
