Saco rojo. Aclaro FKM. Saco lo de primera secuencia conocida.

--- a/tex/caratula.tex
+++ b/tex/caratula.tex
@@ -20,10 +20,10 @@ Departamento de Computaci\'on}
 \vspace{3.0cm}
 
 {
-\Large \color{red}
+\Large
 \begin{tabular}{|p{2cm}cp{2cm}|}
 \hline
-& Versión preliminar: 8 de agosto, 2019 &\\
+& Versión: Jurados. 8 de agosto, 2019 &\\
 \hline
 \end{tabular}
 }
