--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -77,7 +77,7 @@ In engineering, computer science, and other branches of science we are often req
 
 Significant work has been done in this direction. In a paper by Franklin \cite{franklin-1963}, the notion of equidistribution is discussed and presented as a first requirement for randomness. Franklin proves that the sequence of fractional parts $\{ \alpha \}, \{ \alpha^2 \}, \{ \alpha^3 \}, ...$ is completely equidistributed for \textit{almost all} $\alpha > 1$. However, no specific value of $\alpha$ is provided that verifies this property.
 
-The first concrete construction yielding a completely equidistributed sequence is due to Knuth \cite{knuth-1965}, and based on De Bruijn sequences of increasing order and alphabet size. In this work, we provide a similar albeit simpler construction and prove that the sequence it yields is also completely equidistributed.
+A concrete construction yielding a completely equidistributed sequence is given by Knuth \cite{knuth-1965}, and based on De Bruijn sequences of increasing order and alphabet size. In this work, we provide a similar albeit simpler construction and prove that the sequence it yields is also completely equidistributed.
 
 Since a real computer with finite word-length and finite memory can only produce numbers of limited precision and sequences that are ultimately periodic, we ignore this limitation by considering a computational model with infinite memory and with infinite word-length, where real numbers can be stored and computed with perfect precision.
 
