Corrijo mayusculas biblio.

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -1,6 +1,6 @@
 @article{de-bruijn-1946,
   author="de Bruijn, N. G.",
-  title="A combinatorial problem",
+  title="A {C}ombinatorial {P}roblem",
   journal="Proc. Koninklijke Nederlandse Academie van Wetenschappen",
   ISSN="",
   publisher="",
@@ -21,14 +21,14 @@
  number = {81},
  pages = {28--59},
  publisher = {American Mathematical Society},
- title = {Deterministic Simulation of Random Processes},
+ title = {Deterministic {S}imulation of {R}andom {P}rocesses},
  volume = {17},
  year = {1963}
 }
 
 @Article{knuth-1965,
   author="Knuth, Donald E.",
-  title="Construction of a random sequence",
+  title="Construction of a {R}andom {S}equence",
   journal="BIT Numerical Mathematics",
   year="1965",
   month="Dec",
@@ -44,7 +44,7 @@
 
 @article{weyl-1916,
   author="Weyl, Hermann",
-  title="{\"U}ber die Gleichverteilung von Zahlen mod. Eins",
+  title="{\"U}ber die {G}leichverteilung von {Z}ahlen mod. {E}ins",
   journal="Mathematische Annalen",
   year="1916",
   month="Sep",
@@ -65,14 +65,14 @@
   number = "4",
   pages = "672--675",
   publisher = "American Mathematical Society",
-  title = "Review: L. Kuipers and H. Niederreiter, Uniform distribution of sequences",
+  title = "Review: {L}. {K}uipers and H. {N}iederreiter, {U}niform {D}istribution of {S}equences",
   url = "https://projecteuclid.org:443/euclid.bams/1183537132",
   volume = "81",
   year = "1975"
 }
 
 @book{mccarthy-1986,
-  title={Introduction to arithmetical functions},
+  title={Introduction to {A}rithmetical {F}unctions},
   author={McCarthy, P.J.},
   isbn={9780387962627},
   lccn={85026068},
