Comentario sobre PRNGs.

--- a/tex/caratula.tex
+++ b/tex/caratula.tex
@@ -23,7 +23,7 @@ Departamento de Computaci\'on}
 \Large
 \begin{tabular}{|p{2cm}cp{2cm}|}
 \hline
-& Versión: Jurados. 8 de agosto, 2019 &\\
+& Versión: Jurados. 2019 &\\
 \hline
 \end{tabular}
 }
