--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -75,11 +75,11 @@
 
 In engineering, computer science, and other branches of science we are often required to simulate random processes. Simulations usually involve the generation of non-random, deterministic sequences of numbers which approximate a sequence of independent, random samples from a given probability distribution. While a deterministic sequence can never be random in the sense of not following any patterns or being entirely unpredictable, nothing prevents one from identifying properties common to all random sequences and constructing pseudo-random sequences satisfying these properties.
 
-Significant work has been done in this direction. In a paper by Franklin \cite{franklin-1963}, the notion of equidistribution is discussed and presented as a first requirement for randomness. Franklin proves that the sequence of fractional parts $\{ \alpha \}, \{ \alpha^2 \}, \{ \alpha^3 \}, ...$ is completely equidistributed for \textit{almost all} $\alpha > 1$. However, no specific value of $\alpha$ is provided that verifies this property.
+Significant work has been done in this direction. In a paper by Franklin \cite{franklin-1963}, the notion of equidistribution is discussed and presented as a first requirement for randomness. Franklin proves that the sequence of powers $\alpha, \alpha^2, \alpha^3, ...$ is completely equidistributed modulo $1$ for \textit{almost all} $\alpha > 1$. However, no specific value of $\alpha$ is provided that verifies this property. A concrete construction yielding a completely equidistributed sequence is given by Knuth \cite{knuth-1965}, and based on De Bruijn sequences of increasing order and alphabet size. In this work, we provide a similar albeit simpler construction and prove that the sequence it yields is also completely equidistributed.
 
-A concrete construction yielding a completely equidistributed sequence is given by Knuth \cite{knuth-1965}, and based on De Bruijn sequences of increasing order and alphabet size. In this work, we provide a similar albeit simpler construction and prove that the sequence it yields is also completely equidistributed.
+Since any real computer has a finite word-length and a finite amount of memory, it can only produce numbers of limited precision and sequences that are ultimately periodic. Thus, in practice a pseudo-random number generator (PRNG) is unable to produce a truly completely equidistributed sequence. Instead, practical PRNGs are evaluated by empirical randomness tests to show that they possess suitable equidistribution properties (see \cite{l-ecuyer-2007}), and are often equidistributed only up to a finite number of dimensions. For example, numbers produced by the Mersenne Twister, introduced by Matsumoto and Nishimura in \cite{matsumoto-1998}, show $623$-dimensional equidistribution.
 
-Since a real computer with finite word-length and finite memory can only produce numbers of limited precision and sequences that are ultimately periodic, we ignore this limitation by considering a computational model with infinite memory and with infinite word-length, where real numbers can be stored and computed with perfect precision.
+In subsequent sections, we study theoretical properties of sequences based on De Bruijn sequences, ignoring any practical limitations by considering a computational model with infinite memory and with infinite word-length, where real numbers can be stored and computed with perfect precision.
 
 \section{Notational Conventions}
 
