--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -1,6 +1,6 @@
 @article{de-bruijn-1946,
   author="de Bruijn, N. G.",
-  title="A {C}ombinatorial {P}roblem",
+  title="A Combinatorial Problem",
   journal="Proc. Koninklijke Nederlandse Academie van Wetenschappen",
   ISSN="",
   publisher="",
@@ -21,14 +21,14 @@
  number = {81},
  pages = {28--59},
  publisher = {American Mathematical Society},
- title = {Deterministic {S}imulation of {R}andom {P}rocesses},
+ title = {Deterministic Simulation of Random Processes},
  volume = {17},
  year = {1963}
 }
 
 @Article{knuth-1965,
   author="Knuth, Donald E.",
-  title="Construction of a {R}andom {S}equence",
+  title="Construction of a Random Sequence",
   journal="BIT Numerical Mathematics",
   year="1965",
   month="Dec",
@@ -41,6 +41,47 @@
   doi="10.1007/BF01937504",
   url="https://doi.org/10.1007/BF01937504"
 }
+
+@article{matsumoto-1998,
+  author = {Matsumoto, Makoto and Nishimura, Takuji},
+  title = {{Mersenne Twister}: A 623-dimensionally Equidistributed Uniform Pseudo-random Number Generator},
+  journal = {ACM Trans. Model. Comput. Simul.},
+  issue_date = {Jan. 1998},
+  volume = {8},
+  number = {1},
+  month = jan,
+  year = {1998},
+  issn = {1049-3301},
+  pages = {3--30},
+  numpages = {28},
+  url = {http://doi.acm.org/10.1145/272991.272995},
+  doi = {10.1145/272991.272995},
+  acmid = {272995},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {k-distribution, m-sequences, GFSR, MT19937, Mersenne primes, Mersenne twister, TGFSR, finite fields, incomplete array, inversive-decimation method, multiple-recursive matrix method,  primitive polynomials, random number generation, tempering},
+}
+
+@article{l-ecuyer-2007,
+  author = {L'Ecuyer, Pierre and Simard, Richard},
+  title = {{TestU01}: A {C} Library for Empirical Testing of Random Number Generators},
+  journal = {ACM Trans. Math. Softw.},
+  issue_date = {August 2007},
+  volume = {33},
+  number = {4},
+  month = aug,
+  year = {2007},
+  issn = {0098-3500},
+  pages = {22:1--22:40},
+  articleno = {22},
+  numpages = {40},
+  url = {http://doi.acm.org/10.1145/1268776.1268777},
+  doi = {10.1145/1268776.1268777},
+  acmid = {1268777},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Statistical software, random number generators, random number tests, statistical test},
+} 
 
 @article{weyl-1916,
   author="Weyl, Hermann",
@@ -65,7 +106,7 @@
   number = "4",
   pages = "672--675",
   publisher = "American Mathematical Society",
-  title = "Review: {L}. {K}uipers and H. {N}iederreiter, {U}niform {D}istribution of {S}equences",
+  title = "Review: {L}. {K}uipers and {H}. {N}iederreiter. {U}niform Distribution of Sequences",
   url = "https://projecteuclid.org:443/euclid.bams/1183537132",
   volume = "81",
   year = "1975"
