Mejoro seccion De Bruijn.

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -1,18 +1,3 @@
-@article{de-bruijn-1946,
-  author="de Bruijn, N. G.",
-  title="A Combinatorial Problem",
-  journal="Proc. Koninklijke Nederlandse Academie van Wetenschappen",
-  ISSN="",
-  publisher="",
-  year="1946",
-  month="",
-  volume="49",
-  number="",
-  pages="758-764",
-  URL="https://ci.nii.ac.jp/naid/10019660672/en/",
-  DOI="",
-}
-
 @article{franklin-1963,
  ISSN = {00255718, 10886842},
  URL = {http://www.jstor.org/stable/2003733},
@@ -42,26 +27,6 @@
   url="https://doi.org/10.1007/BF01937504"
 }
 
-@article{matsumoto-1998,
-  author = {Matsumoto, Makoto and Nishimura, Takuji},
-  title = {{Mersenne Twister}: A 623-dimensionally Equidistributed Uniform Pseudo-random Number Generator},
-  journal = {ACM Trans. Model. Comput. Simul.},
-  issue_date = {Jan. 1998},
-  volume = {8},
-  number = {1},
-  month = jan,
-  year = {1998},
-  issn = {1049-3301},
-  pages = {3--30},
-  numpages = {28},
-  url = {http://doi.acm.org/10.1145/272991.272995},
-  doi = {10.1145/272991.272995},
-  acmid = {272995},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-  keywords = {k-distribution, m-sequences, GFSR, MT19937, Mersenne primes, Mersenne twister, TGFSR, finite fields, incomplete array, inversive-decimation method, multiple-recursive matrix method,  primitive polynomials, random number generation, tempering},
-}
-
 @article{l-ecuyer-2007,
   author = {L'Ecuyer, Pierre and Simard, Richard},
   title = {{TestU01}: A {C} Library for Empirical Testing of Random Number Generators},
@@ -81,7 +46,27 @@
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {Statistical software, random number generators, random number tests, statistical test},
-} 
+}
+
+@article{matsumoto-1998,
+  author = {Matsumoto, M. and Nishimura, T.},
+  title = {{Mersenne Twister}: A 623-dimensionally Equidistributed Uniform Pseudo-random Number Generator},
+  journal = {ACM Trans. Model. Comput. Simul.},
+  issue_date = {Jan. 1998},
+  volume = {8},
+  number = {1},
+  month = jan,
+  year = {1998},
+  issn = {1049-3301},
+  pages = {3--30},
+  numpages = {28},
+  url = {http://doi.acm.org/10.1145/272991.272995},
+  doi = {10.1145/272991.272995},
+  acmid = {272995},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {k-distribution, m-sequences, GFSR, MT19937, Mersenne primes, Mersenne twister, TGFSR, finite fields, incomplete array, inversive-decimation method, multiple-recursive matrix method,  primitive polynomials, random number generation, tempering},
+}
 
 @article{weyl-1916,
   author="Weyl, Hermann",
@@ -96,6 +81,109 @@
   issn="1432-1807",
   doi="10.1007/BF01475864",
   url="https://doi.org/10.1007/BF01475864"
+}
+
+@article{de-bruijn-1946,
+  author="de Bruijn, N. G.",
+  title="A Combinatorial Problem",
+  journal="Proc. Koninklijke Nederlandse Academie van Wetenschappen",
+  ISSN="",
+  publisher="",
+  year="1946",
+  month="",
+  volume="49",
+  number="",
+  pages="758-764",
+  URL="https://ci.nii.ac.jp/naid/10019660672/en/",
+  DOI="",
+}
+
+@article{berstel-2007,
+  title = "The origins of combinatorics on words",
+  journal = "European Journal of Combinatorics",
+  volume = "28",
+  number = "3",
+  pages = "996 - 1022",
+  year = "2007",
+  issn = "0195-6698",
+  doi = "https://doi.org/10.1016/j.ejc.2005.07.019",
+  url = "http://www.sciencedirect.com/science/article/pii/S0195669805001629",
+  author = "J. Berstel and D. Perrin",
+  abstract = "We investigate the historical roots of the field of combinatorics on words. They comprise applications and interpretations in algebra, geometry and combinatorial enumeration. These considerations gave rise to early results such as those of Axel Thue at the beginning of the 20th century. Other early results were obtained as a by-product of investigations on various combinatorial objects. For example, paths in graphs are encoded by words in a natural way, and conversely, the Cayley graph of a group or a semigroup encodes words by paths. We give in this text an account of this two-sided interaction."
+}
+
+@article{fredricksen-1970,
+  title = "The lexicographically least de Bruijn cycle",
+  journal = "Journal of Combinatorial Theory",
+  volume = "9",
+  number = "1",
+  pages = "1 - 5",
+  year = "1970",
+  issn = "0021-9800",
+  doi = "https://doi.org/10.1016/S0021-9800(70)80050-3",
+  url = "http://www.sciencedirect.com/science/article/pii/S0021980070800503",
+  author = "H. Fredricksen",
+  abstract = "We investigate Ford's method for generating a de Bruijn cycle of degree n. We show that the feedback function which generates the cycle has the minimum possible number of positions equal to 1 and we give an algorithm which finds those positions for all n."
+}
+
+@article{fredricksen-1978,
+  title = "Necklaces of beads in k colors and k-ary de Bruijn sequences",
+  journal = "Discrete Mathematics",
+  volume = "23",
+  number = "3",
+  pages = "207 - 210",
+  year = "1978",
+  issn = "0012-365X",
+  doi = "https://doi.org/10.1016/0012-365X(78)90002-X",
+  url = "http://www.sciencedirect.com/science/article/pii/0012365X7890002X",
+  author = "H. Fredricksen and J. Maiorana",
+  abstract = "This paper constructs a decreasing lexicographic list of necklaces of length n in beads of k colors. This list, somewhat modified, produces a k-ary de Bruijn sequence of length kn."
+}
+
+@misc{fredricksen-1982,
+  title = {A survey of full length nonlinear shift register cycle algorithms},
+  author = {Fredricksen, H.},
+  year = {1982},
+  URL = {https://calhoun.nps.edu/handle/10945/61146},
+  publisher = {Calhoun}
+}
+
+@article{ruskey-1991,
+  title = "Generating necklaces",
+  journal = "Journal of Algorithms",
+  volume = "13",
+  number = "3",
+  pages = "414 - 430",
+  year = "1992",
+  issn = "0196-6774",
+  doi = "https://doi.org/10.1016/0196-6774(92)90047-G",
+  url = "http://www.sciencedirect.com/science/article/pii/019667749290047G",
+  author = "F. Ruskey and C. Savage and T. M. Y. Wang",
+  abstract = "A k-color, n-bead necklace is an equivalence class of k-ary n-tuples under rotation. In this paper, we analyze an algorithm due to Fredricksen, Kessler, and Maiorana (FKM) to show that necklaces can be generated in constant amortized time. We also present a new approach to generating necklaces which we conjecture can also be implemented in constant amortized time. The FKM algorithm generates a list of n-tuples which includes, among other things, the lexicographically smallest element of each k-color, n-bead necklace. Previously it had been shown only that the list contains at most O(n · N(k, n)) elements, where N(k, n) is the number of k-color, n-bead necklaces, and that successive elements can be generated in worst case time O(n), giving a bound of O(n2 · N(k, n)) on the time for the algorithm. We show that the number of elements generated by the FKM algorithm approaches (k(k − 1)) · N(k, n) and the total time is only O(N(k, n)). A by-product of our analysis is a precise characterization of the list generated by FKM, which makes a recursive description possible."
+}
+
+@article{ford-1957,
+  title = "A cyclic arrangement of m-tuples",
+  journal = "Journal of Combinatorial Theory",
+  number = "Report P-1071",
+  year = "1957",
+  author = "L. R. Ford",
+  publisher = {Rand Corp.},
+  address = {Santa Monica, CA, USA},
+}
+
+@article{martin-1934,
+  author = "Martin, M. H.",
+  fjournal = "Bulletin of the American Mathematical Society",
+  journal = "Bull. Amer. Math. Soc.",
+  month = "12",
+  number = "12",
+  pages = "859--864",
+  publisher = "American Mathematical Society",
+  title = "A problem in arrangements",
+  url = "https://projecteuclid.org:443/euclid.bams/1183497876",
+  volume = "40",
+  year = "1934"
 }
 
 @article{tijdeman-1975,
